--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1",
     "vite": "^4.5.3"
-  }
+  },
+  "homepage": "https://USERNAME.github.io/REPOSITORY_NAME",
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
 }
