--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "tailwindcss": "^3.3.1",
     "vite": "^4.5.3"
   },
-  "homepage": "https://USERNAME.github.io/REPOSITORY_NAME",
+  "homepage": "https://esraa-abdo3.github.io/portfolio-esraaabdelnasser",
 "scripts": {
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build"
