--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-hook/media-query": "^1.1.1",
     "@sweetalert2/theme-dark": "^5.0.15",
     "axios": "^1.4.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
